Xilinx: ARM: Add initial SecureDigital support.
Usage:
pele-boot> mmc rescan 0
pele-boot> fatls mmc 0
  3025088   vmlinux.bin
  1048576   ramdisk1m.image
  3145728   ramdisk3m.image
  7340032   ramdisk7m.test.image

4 file(s), 0 dir(s)

pele-boot> fatload mmc 0 0x8000 vmlinux.bin
pele-boot> fatload mmc 0 0x800000 ramdisk3m.image
pele-boot> go 0x8000

--- a/board/xilinx/dfe/Makefile
+++ b/board/xilinx/dfe/Makefile
@@ -34,6 +34,7 @@ COBJS	:= board.o \
 	   xilinx_nandpss.o \
 	   xilinx_qspipss.o \
 	   pele_qspi.o \
+	   mmc.o \
 	   ../common/xbasic_types.o
 
 SOBJS	:= lowlevel_init.o
