Zynq: Add pele-alpha2_3.0-release
Add pele-alpha2_3.0-release.

There are two file did not patch cleanly, I manually patch the boards.cfg
and drivers/mtd/cfi_flash.c. They looks clean to me.

log:
jwu:u-boot > patch -p1 < ../pele-a2.patch
patching file Makefile
Hunk #1 succeeded at 990 (offset -1177 lines).
patching file arch/arm/cpu/armv7/omap-common/config.mk
patching file arch/arm/cpu/armv7/pele/Makefile
patching file arch/arm/cpu/armv7/pele/config.mk
patching file arch/arm/cpu/armv7/pele/timer.c
patching file arch/arm/cpu/armv7/pele/xscutimer_hw.h
patching file arch/arm/cpu/armv7/start.S
Hunk #1 succeeded at 43 (offset 1 line).
Hunk #2 succeeded at 315 (offset 93 lines).
Hunk #3 succeeded at 344 (offset 93 lines).
patching file board/xilinx/common/xbasic_types.c
patching file board/xilinx/common/xbasic_types.h
patching file board/xilinx/common/xstatus.h
patching file board/xilinx/dfe/Makefile
patching file board/xilinx/dfe/board.c
patching file board/xilinx/dfe/config.mk
patching file board/xilinx/dfe/lowlevel_init.S
patching file board/xilinx/dfe/xemacpss.c
patching file board/xilinx/dfe/xemacpss.h
patching file board/xilinx/dfe/xemacpss_bd.h
patching file board/xilinx/dfe/xemacpss_bdring.c
patching file board/xilinx/dfe/xemacpss_bdring.h
patching file board/xilinx/dfe/xemacpss_control.c
patching file board/xilinx/dfe/xemacpss_g.c
patching file board/xilinx/dfe/xemacpss_hw.h
patching file board/xilinx/dfe/xemacpss_sinit.c
patching file board/xilinx/dfe/xgmac.c
patching file board/xilinx/dfe/xgmac.h
patching file board/xilinx/dfe/xilinx_nand_smc.h
patching file board/xilinx/dfe/xilinx_nandpss.c
patching file board/xilinx/dfe/xparameters.h
patching file board/xilinx/dfe/xparameters_pss.h
patching file boards.cfg
Hunk #1 FAILED at 264.
#1 out of 1 hunk FAILED -- saving rejects to file boards.cfg.rej
patching file drivers/mtd/cfi_flash.c
Hunk #1 FAILED at 1971.
#1 out of 1 hunk FAILED -- saving rejects to file drivers/mtd/cfi_flash.c.rej
patching file drivers/mtd/n

--- a/arch/arm/cpu/armv7/pele/Makefile
+++ b/arch/arm/cpu/armv7/pele/Makefile
@@ -1,6 +1,9 @@
 #
-# (C) Copyright 2002
-# Gary Jennejohn, DENX Software Engineering, <garyj@denx.de>
+# (C) Copyright 2000-2003
+# Wolfgang Denk, DENX Software Engineering, wd@denx.de.
+#
+# (C) Copyright 2008
+# Guennadi Liakhovetki, DENX Software Engineering, <lg@denx.de>
 #
 # See file CREDITS for list of people who contributed to this
 # project.
@@ -20,16 +23,25 @@
 # Foundation, Inc., 59 Temple Place, Suite 330, Boston,
 # MA 02111-1307 USA
 #
-PLATFORM_RELFLAGS += -fno-common -ffixed-r8 -msoft-float
 
-# Make ARMv5 to allow more compilers to work, even though its v7a.
-# PLATFORM_CPPFLAGS += -march=armv5
-PLATFORM_CPPFLAGS += -march=armv7-a
+include $(TOPDIR)/config.mk
 
-# =========================================================================
-#
-# Supply options according to compiler version
-#
-# =========================================================================
-PLATFORM_RELFLAGS +=$(call cc-option,-mshort-load-bytes,\
-		    $(call cc-option,-malignment-traps,))
+LIB	= $(obj)lib$(SOC).a
+
+COBJS-y	= timer.o 
+
+OBJS	:= $(addprefix $(obj),$(SOBJS) $(COBJS-y))
+
+all:	$(obj).depend $(START) $(LIB)
+
+$(LIB):	$(OBJS)
+	$(AR) $(ARFLAGS) $@ $(OBJS)
+
+#########################################################################
+
+# defines $(obj).depend target
+include $(SRCTREE)/rules.mk
+
+sinclude $(obj).depend
+
+#########################################################################
