add petalogix-arm-auto to boards.cfg

--- a/boards.cfg
+++ b/boards.cfg
@@ -158,6 +158,7 @@ devkit8000                   arm         armv7       devkit8000          timll  
 omap4_panda                  arm         armv7       panda               ti             omap4
 omap4_sdp4430                arm         armv7       sdp4430             ti             omap4
 xpele			     arm	 armv7	     dfe		 xilinx		pele
+petalogix-arm-auto           arm         armv7       arm-auto            petalogix      pele
 s5p_goni                     arm         armv7       goni                samsung        s5pc1xx
 smdkc100                     arm         armv7       smdkc100            samsung        s5pc1xx
 s5pc210_universal            arm         armv7       universal_c210      samsung        s5pc2xx
