template: Remove 0x3 offset from xparameters
u-boot BSP is also changed.

Signed-off-by: Michal Simek <monstr@monstr.eu>

--- a/include/configs/petalinux-auto-board.h.template
+++ b/include/configs/petalinux-auto-board.h.template
@@ -38,11 +38,16 @@
 	#define	CONFIG_XILINX_UARTLITE
 	#define CONFIG_SYS_NS16550	1
 	#define CONFIG_SYS_NS16550_SERIAL
-	#define CONFIG_SYS_NS16550_REG_SIZE	-4
+
+	#if defined(__MICROBLAZEEL__)
+	# define CONFIG_SYS_NS16550_REG_SIZE	-4
+	#else
+	# define CONFIG_SYS_NS16550_REG_SIZE	4
+	#endif
 #endif
 
 #if XILINX_UART16550_BASEADDR
-# define CONFIG_SYS_NS16550_COM1	(XILINX_UART16550_BASEADDR + 0x1000)
+# define CONFIG_SYS_NS16550_COM1	((XILINX_UART16550_BASEADDR & ~0xF) + 0x1000)
 # define CONFIG_SYS_NS16550_CLK		XILINX_UART16550_CLOCK_HZ
 
 /* CONS_INDEX for system with uartlite only mustn't define CONFIG_CONS_INDEX
