Zynq:Xilinx: ARM: SCU timer input frequency update
port Xilinx: ARM: SCU timer input frequency update to petalinux

From 1dbcd31ab52bd396e1eb82074cb67eb45d14e971 Mon Sep 17 00:00:00 2001
From: Andrei Simion <andreis@xilinx.com>
Date: Wed, 9 Nov 2011 19:29:19 -0800
Subject: [PATCH] Xilinx: ARM: SCU timer input frequency update.

Modified the 'xpele.h' configuration such that the timer input
frequency is always half of the CPU core clock frequency from
'xparameters.h' (PERIPHCLK in the TRM) instead of hard-coded
to 5 MHz.

Signed-off-by: Jason Wu <jason.wu@petalogix.com>

--- a/include/configs/petalinux-auto-board.h.template
+++ b/include/configs/petalinux-auto-board.h.template
@@ -190,7 +190,7 @@
 	#if defined(XPSS_TTC0_BASEADDR) || defined (XPSS_TTC1_BASEADDR)
 		/* setting for Zynq */
 		/* FIXME: this based on the xpele.h file but we need to check again */
-		#define TIMER_INPUT_CLOCK               5000000
+		#define TIMER_INPUT_CLOCK               XPAR_CPU_CORTEXA9_CORE_CLOCK_FREQ_HZ / 2
 		#define CONFIG_TIMER_PRESCALE           255
 		#define TIMER_TICK_HZ                   (TIMER_INPUT_CLOCK / CONFIG_TIMER_PRESCALE)
 		/* duplication */
