arm64: xilinx: Add dts files for Versal/Versal NET supported boards
Add DT description for all not upstream Versal and Versal NET platforms.

Signed-off-by: Michal Simek <michal.simek@amd.com>
[michal: Squashed with a lot of patches
arm64: versal: Move reset-gpios property from controller node to flash node
arm64: xilinx: Define bootscript address
arm64: versal: Add support for Versal Embedded+ VE2302-revA
arm64: versal: Configure reset gpio as active low
arm64: versal-net: Align interrupts for ipp-rev1.9
xilinx: dts: Update the reg names for ddrmc edac
arm64: versal: Remove additional cpu property
arm64: versal: Fix cpu-opp-table name
arm64: versal: Fix gic DT description
arm64: versal: Define 8 irqs for cci-500-pmu instead of 9
arm64: versal: Align dmas with dt schema
arm64: versal: Remove unused xlnx,mc-id property
arm64: versal: Remove second interrupt property for qspi/ospi
arm64: versal: Use iommu name for smmus
arm64: versal-net: Align spi-max-frequency for ipp-rev1.9
arm64: versal: Remove flexnoc node
arm64: versal-net: Align spi-max-frequency for se7
arm64: versal: Add LPD SWDT node in versal.dtsi
dt-bindings: power: Add PM for LPD SWDT
arm64: versal: Add clocks and power domains for LPD SWDT
arm64: versal: Remove clk_ignore_unused flag from DTs
arm64: versal: Remove undocumented cadence,qspi compatible
arm64: versal-net: Align node names with dt-schema
arm: dts: versal: Fix ranges property to avoid overlapping of bridge register and 32-bit BAR addresses
Partial Revert "arm64: versal-net: Align node names with dt-schema"
arm64: versal-net: Add thermal sensor and zone
dt-bindings: xilinx: Add WWDT clock IDs for Versal NET
dts: xilinx: update clock IDs for Versal NET WWDT nodes
arm64: versal: Use fpga-region instead of fpga to match dt-schema
arm64: versal: add thermal sensor and zone
arm64: versal: Sync address/size cells with binding
arm64: versal: Fix ospi compatible strings
arm64: versal: Fix vek280 memory configuration
arm64: versal-net: Add description 

--- a/arch/arm/dts/Makefile
+++ b/arch/arm/dts/Makefile
@@ -386,6 +386,8 @@ dtb-$(CONFIG_ARCH_ZYNQMP) += zynqmp-smk-k24-revA-sck-kr-g-revB.dtb
 dtb-$(CONFIG_ARCH_ZYNQMP) += zynqmp-binman-som.dtb
 
 dtb-$(CONFIG_ARCH_VERSAL) += \
+	versal-emb-plus-rhino-revA.dtb \
+	versal-emb-plus-ve2302-revA.dtb \
 	versal-mini.dtb \
 	versal-mini-emmc0.dtb \
 	versal-mini-emmc1.dtb \
@@ -398,10 +400,56 @@ dtb-$(CONFIG_ARCH_VERSAL) += \
 	versal-mini-qspi-x1-stacked.dtb \
 	versal-mini-qspi-x2-single.dtb \
 	versal-mini-qspi-x2-stacked.dtb \
+	versal-v350-revA.dtb \
+	versal-v80-rev1.0.dtb \
+	versal-vck190-revA.dtb \
+	versal-vck190-revA-x-ebm-01-revA.dtb \
+	versal-vck190-revA-x-ebm-02-revA.dtb \
+	versal-vck190-revA-x-ebm-03-revA.dtb \
+	versal-vck190-rev1.1.dtb \
+	versal-vck190-rev1.1-x-ebm-01-revA.dtb \
+	versal-vck190-rev1.1-x-ebm-02-revA.dtb \
+	versal-vck190-rev1.1-x-ebm-03-revA.dtb \
+	versal-vck5000-revA.dtb \
+	versal-vc-p-a2197-00-revA.dtb \
+	versal-vc-p-a2197-00-revA-x-prc-01-revA.dtb \
+	versal-vc-p-a2197-00-revA-x-prc-01-revA-ospi.dtb \
+	versal-vc-p-a2197-00-revA-x-prc-02-revA.dtb \
+	versal-vc-p-a2197-00-revA-x-prc-03-revA.dtb \
+	versal-vc-p-a2197-00-revA-x-prc-04-revA.dtb \
+	versal-vc-p-a2197-00-revA-x-prc-04-revA-ospi.dtb \
+	versal-vc-p-a2197-00-revA-x-prc-05-revA.dtb \
+	versal-vm-p-m1369-00-revA.dtb \
+	versal-vm-p-m1369-00-revA-x-prc-01-revA.dtb \
+	versal-vek280-revA.dtb \
+	versal-vek280-revB.dtb \
+	versal-vhk158-revA.dtb \
+	versal-vmk180-revA.dtb \
+	versal-vmk180-revA-x-ebm-01-revA.dtb \
+	versal-vmk180-revA-x-ebm-02-revA.dtb \
+	versal-vmk180-revA-x-ebm-03-revA.dtb \
+	versal-vmk180-rev1.1.dtb \
+	versal-vmk180-rev1.1-x-ebm-01-revA.dtb \
+	versal-vmk180-rev1.1-x-ebm-02-revA.dtb \
+	versal-vmk180-rev1.1-x-ebm-03-revA.dtb \
+	versal-vpk120-revA.dtb \
+	versal-vpk120-revB.dtb \
+	versal-vpk180-revA.dtb \
+	versal-vp-x-a2785-00-revA.dtb \
+	versal-x-ebm-01-revA.dtbo \
+	versal-x-ebm-02-revA.dtbo \
+	versal-x-ebm-03-revA.dtbo \
 	xilinx-versal-virt.dtb
 dtb-$(CONFIG_ARCH_VERSAL2) += \
 	amd-versal2-virt.dtb
 dtb-$(CONFIG_ARCH_VERSAL_NET) += \
+	versal-net-vn-p-b2197-00-revA.dtb \
+	versal-net-vn-x-b2197-01-revA.dtb \
+	x-prc-07-revA.dtbo \
+	x-prc-07-i3c-revA.dtbo \
+	x-prc-08-revA.dtbo \
+	x-prc-09-revA.dtbo \
+	x-prc-09-i3c-revA.dtbo \
 	versal-net-mini.dtb \
 	versal-net-mini-emmc.dtb \
 	versal-net-mini-ospi-single.dtb \
