--- a/arch/arm/dts/Makefile
+++ b/arch/arm/dts/Makefile
@@ -351,6 +351,7 @@ dtb-$(CONFIG_ARCH_ZYNQMP) += \
 	zynqmp-mini-qspi-x2-single.dtb		\
 	zynqmp-mini-qspi-x2-stacked.dtb		\
 	zynqmp-sc-revB.dtb			\
+	zynqmp-sc-vhk158-revA.dtbo		\
 	zynqmp-sc-vpk120-revB.dtbo		\
 	zynqmp-sc-vpk180-revA.dtbo		\
 	zynqmp-sm-k26-revA.dtb			\
@@ -418,6 +419,7 @@ dtb-$(CONFIG_ARCH_VERSAL) += \
 	versal-vc-p-a2197-00-revA-x-prc-04-revA.dtb \
 	versal-vc-p-a2197-00-revA-x-prc-04-revA-ospi.dtb \
 	versal-vc-p-a2197-00-revA-x-prc-05-revA.dtb \
+	versal-vhk158-revA.dtb \
 	versal-vmk180-revA.dtb \
 	versal-vmk180-revA-x-ebm-01-revA.dtb \
 	versal-vmk180-revA-x-ebm-02-revA.dtb \
