arm64: versal: Ospi mini versal defconfig changes to support ospi ddr
This patch has the following changes in versal ospi mini defconfig to
support ospi DDR mode.
 * Enable soft reset support for xspi flashes to switch flash from ddr
   to sdr mode.
 * Enable support for MT35XU series flashes which supports DDR mode.
 * Enable SOC_XILINX_VERSAL config to enable soc_xilinx_versal driver to
   read the silicon revision and family. Only versal V2 silicon supports
   DDR feature.
 * Increase SYS_MALLOC_F_LEN to accommodate sufficient heap area to boot
   mini u-boot.

Signed-off-by: T Karthik Reddy <t.karthik.reddy@xilinx.com>
State: pending

--- a/configs/xilinx_versal_mini_ospi_defconfig
+++ b/configs/xilinx_versal_mini_ospi_defconfig
@@ -3,6 +3,7 @@ CONFIG_SYS_CONFIG_NAME="xilinx_versal_mini_qspi"
 CONFIG_ARCH_VERSAL=y
 CONFIG_SYS_TEXT_BASE=0xFFFC0000
 CONFIG_SYS_MALLOC_LEN=0x2000
+CONFIG_SYS_MALLOC_F_LEN=0x500
 CONFIG_NR_DRAM_BANKS=1
 CONFIG_ENV_SIZE=0x80
 # CONFIG_DM_GPIO is not set
@@ -52,11 +53,15 @@ CONFIG_SYS_PROMPT="Versal> "
 # CONFIG_MMC is not set
 CONFIG_DM_SPI_FLASH=y
 CONFIG_SF_DEFAULT_SPEED=30000000
+CONFIG_SPI_FLASH_SOFT_RESET=y
+CONFIG_SPI_FLASH_SOFT_RESET_ON_BOOT=y
 CONFIG_SPI_FLASH_GIGADEVICE=y
 CONFIG_SPI_FLASH_ISSI=y
 CONFIG_SPI_FLASH_MACRONIX=y
 CONFIG_SPI_FLASH_STMICRO=y
+CONFIG_SPI_FLASH_MT35XU=y
 CONFIG_ARM_DCC=y
+CONFIG_SOC_XILINX_VERSAL=y
 CONFIG_SPI=y
 CONFIG_DM_SPI=y
 CONFIG_CADENCE_QSPI=y
