xilinx: Add support for vek280 revA board
Add support for Versal VEK280 revA board. Also add DT overlay for SC.

Signed-off-by: Michal Simek <michal.simek@amd.com>

--- a/arch/arm/dts/Makefile
+++ b/arch/arm/dts/Makefile
@@ -352,6 +352,7 @@ dtb-$(CONFIG_ARCH_ZYNQMP) += \
 	zynqmp-mini-qspi-x2-single.dtb		\
 	zynqmp-mini-qspi-x2-stacked.dtb		\
 	zynqmp-sc-revB.dtb			\
+	zynqmp-sc-vek280-revA.dtbo		\
 	zynqmp-sc-vhk158-revA.dtbo		\
 	zynqmp-sc-vpk120-revB.dtbo		\
 	zynqmp-sc-vpk180-revA.dtbo		\
@@ -420,6 +421,7 @@ dtb-$(CONFIG_ARCH_VERSAL) += \
 	versal-vc-p-a2197-00-revA-x-prc-04-revA.dtb \
 	versal-vc-p-a2197-00-revA-x-prc-04-revA-ospi.dtb \
 	versal-vc-p-a2197-00-revA-x-prc-05-revA.dtb \
+	versal-vek280-revA.dtb \
 	versal-vhk158-revA.dtb \
 	versal-vmk180-revA.dtb \
 	versal-vmk180-revA-x-ebm-01-revA.dtb \
