--- a/arch/arm/dts/zynq-7000.dtsi
+++ b/arch/arm/dts/zynq-7000.dtsi
@@ -193,9 +193,7 @@
 		};
 
 		ocmc: ocmc@f800c000 {
-			compatible = "xlnx,zynq-ocmc-1.0";
-			interrupt-parent = <&intc>;
-			interrupts = <0 3 4>;
+			compatible = "mmio-sram";
 			reg = <0xf800c000 0x1000>;
 		};
 
