dt-bindings: versal: Update versal reset IDs
The same file is already the part of Linux kernel that's why add it also to
u-boot to be able to use it in source code and DT files.

Signed-off-by: Michal Simek <michal.simek@amd.com>
Link: https://lore.kernel.org/r/1c3bc464536a9bf64a2e8bfe18a938c9cb490620.1657192249.git.michal.simek@amd.com
State: waiting

--- a/arch/arm/dts/versal-clk.dtsi
+++ b/arch/arm/dts/versal-clk.dtsi
@@ -310,7 +310,7 @@
 &usb0 {
 	clocks = <&versal_clk USB0_BUS_REF>, <&versal_clk USB3_DUAL_REF>;
 	power-domains = <&versal_firmware PM_DEV_USB_0>;
-	resets = <&versal_reset PM_RST_USB_0>;
+	resets = <&versal_reset VERSAL_RST_USB_0>;
 };
 
 &watchdog {
