reset: zynqmp: Add reset driver support for versal
Enable zynqmp-reset driver for versal platform by enabling
CONFIG_DM_RESET & CONFIG_RESET_ZYNQMP by default. Add support for versal
platform by adding "xlnx,versal-reset" compatible string in zynqmp-reset
driver. Reset numbering schema for versal is not same as zynqmp, so
nr_reset and reset_id are set to zero. In case of assert/dessert,
required device reset id is sent from respective driver through
struct reset_ctl.

Signed-off-by: T Karthik Reddy <t.karthik.reddy@amd.com>

--- a/drivers/reset/Kconfig
+++ b/drivers/reset/Kconfig
@@ -199,7 +199,7 @@ config RESET_SCMI
 	  protocol communication with a SCMI server.
 
 config RESET_ZYNQMP
-	bool "Reset Driver for Xilinx ZynqMP SoC's"
+	bool "Reset Driver for Xilinx ZynqMP & Versal SoC's"
 	depends on DM_RESET && ZYNQMP_FIRMWARE
 	help
 	  Support for reset controller on Xilinx ZynqMP SoC. Driver is only
