--- a/arch/arm/dts/versal-vc-p-a2197-00-revA-x-prc-01-revA-ospi.dts
+++ b/arch/arm/dts/versal-vc-p-a2197-00-revA-x-prc-01-revA-ospi.dts
@@ -30,6 +30,7 @@
 	#address-cells = <1>;
 	#size-cells = <0>;
 	reset-gpios = <&gpio1 0xc GPIO_ACTIVE_HIGH>;
+	resets = <&versal_reset VERSAL_RST_OSPI>;
 
 	flash@0 {
 		compatible = "mt35xu02g", "micron,m25p80", "jedec,spi-nor";
