--- a/arch/arm/dts/versal-clk.dtsi
+++ b/arch/arm/dts/versal-clk.dtsi
@@ -313,6 +313,10 @@
 	resets = <&versal_reset VERSAL_RST_USB_0>;
 };
 
+&dwc3_0 {
+	clocks = <&versal_clk USB0_BUS_REF>;
+};
+
 &watchdog {
 	clocks = <&versal_clk LPD_LSBUS>;
 	power-domains = <&versal_firmware PM_DEV_SWDT_FPD>;
