--- a/configs/stv0991_defconfig
+++ b/configs/stv0991_defconfig
@@ -36,3 +36,5 @@ CONFIG_PHY_MICREL_KSZ8XXX=y
 CONFIG_ETH_DESIGNWARE=y
 CONFIG_MII=y
 CONFIG_CADENCE_QSPI=y
+CONFIG_HAS_CQSPI_REF_CLK=y
+CONFIG_CQSPI_REF_CLK=3000000
