--- a/arch/arm/dts/versal-x-ebm-03-revA.dtsi
+++ b/arch/arm/dts/versal-x-ebm-03-revA.dtsi
@@ -18,6 +18,7 @@ num-cs = <1>;
 #address-cells = <1>;
 #size-cells = <0>;
 reset-gpios = <&gpio1 0xc GPIO_ACTIVE_HIGH>;
+reset-names = "qspi";
 resets = <&versal_reset VERSAL_RST_OSPI>;
 
 flash@0 {
