arm: dts: zynqmp: add snps,xhci-reset-on-resume quirk
Add quirk 'snps,xhci-reset-on-resume' to resolve the warning generated
on resume, during the suspend cycle when USB is not pluh-in or USB not
set as a wakeup source then power management turn off the clock and
power for usb source, to save power.

Quirk added for both usb0 and usb1.

Signed-off-by: Piyush Mehta <piyush.mehta@amd.com>
State: pending

--- a/arch/arm/dts/zynqmp.dtsi
+++ b/arch/arm/dts/zynqmp.dtsi
@@ -1028,6 +1028,7 @@
 				clock-names = "ref";
 				snps,enable_guctl1_resume_quirk;
 				snps,enable_guctl1_ipd_quirk;
+				snps,xhci-reset-on-resume;
 				snps,xhci-stream-quirk;
 				/* dma-coherent; */
 			};
@@ -1061,6 +1062,7 @@
 				clock-names = "ref";
 				snps,enable_guctl1_resume_quirk;
 				snps,enable_guctl1_ipd_quirk;
+				snps,xhci-reset-on-resume;
 				snps,xhci-stream-quirk;
 				/* dma-coherent; */
 			};
