--- a/arch/arm/dts/Makefile
+++ b/arch/arm/dts/Makefile
@@ -439,7 +439,8 @@ dtb-$(CONFIG_ARCH_VERSAL) += \
 dtb-$(CONFIG_ARCH_VERSAL_NET) += \
 	versal-net-emu-rev1.9.dtb \
 	versal-net-ipp-rev1.9.dtb \
-	versal-net-ipp-rev1.9-ospi.dtb
+	versal-net-ipp-rev1.9-ospi.dtb \
+	versal-net-mini.dtb
 dtb-$(CONFIG_ARCH_ZYNQMP_R5) += \
 	zynqmp-r5.dtb
 dtb-$(CONFIG_AM33XX) += \
