--- a/arch/arm/dts/versal-net-ipp-rev1.9.dts
+++ b/arch/arm/dts/versal-net-ipp-rev1.9.dts
@@ -440,6 +440,7 @@
 				spi-tx-bus-width = <8>;
 				spi-rx-bus-width = <8>;
 				spi-max-frequency = <5000000>;
+				broken-flash-reset;
 
 				partitions {
 					compatible = "fixed-partitions";
