arm64: versal-net: Enable power and reset drivers
Enable zynqmp power and reset drivers for Versal NET.

Signed-off-by: Jay Buddhabhatti <jay.buddhabhatti@xilinx.com>

--- a/arch/arm/dts/versal-net-ipp-rev1.9.dts
+++ b/arch/arm/dts/versal-net-ipp-rev1.9.dts
@@ -131,7 +131,16 @@
 			u-boot,dm-pre-reloc;
 			method = "smc";
 			#power-domain-cells = <0x01>;
+
+			zynqmp_power: zynqmp-power {
+				compatible = "xlnx,zynqmp-power";
+				interrupts = <0 57 4>;
+				mboxes = <&ipi_mailbox_pmu1 0>,
+					<&ipi_mailbox_pmu1 1>;
+				mbox-names = "tx", "rx";
+			};
 		};
+
 		psci {
 			compatible = "arm,psci-1.0";
 			method = "smc";
