--- a/arch/arm/dts/versal-net-ipp-rev1.9.dts
+++ b/arch/arm/dts/versal-net-ipp-rev1.9.dts
@@ -10,6 +10,7 @@
 /dts-v1/;
 
 #include <dt-bindings/gpio/gpio.h>
+#include <dt-bindings/clock/xlnx-versal-net-clk.h>
 #include <dt-bindings/power/xlnx-versal-net-power.h>
 #include <dt-bindings/reset/xlnx-versal-net-resets.h>
 
@@ -124,6 +125,13 @@
 		stdout-path = "serial0:115200";
 	};
 
+	ref_clk: ref_clk {
+		compatible = "fixed-clock";
+		u-boot,dm-pre-reloc;
+		#clock-cells = <0>;
+		clock-frequency = <33333333>;
+	};
+
 	firmware {
 		versal_net_firmware: versal-net-firmware {
 			compatible = "xlnx,versal-net-firmware";
@@ -131,6 +139,14 @@
 			u-boot,dm-pre-reloc;
 			method = "smc";
 			#power-domain-cells = <0x01>;
+
+			versal_net_clk: clock-controller {
+				u-boot,dm-pre-reloc;
+				#clock-cells = <1>;
+				compatible = "xlnx,versal-net-clk";
+				clocks = <&ref_clk>, <&ref_clk>;
+				clock-names = "ref_clk", "pl_alt_ref_clk";
+			};
 
 			zynqmp_power: zynqmp-power {
 				compatible = "xlnx,zynqmp-power";
@@ -172,51 +188,6 @@
 		};
 	};
 
-	clk1: clk1 {
-		u-boot,dm-pre-reloc;
-		compatible = "fixed-clock";
-		#clock-cells = <0>;
-		clock-frequency = <1000000>;
-	};
-
-	clk2_6: clk2_6 {
-		compatible = "fixed-clock";
-		#clock-cells = <0>;
-		clock-frequency = <2670000>;
-	};
-
-	clk20: clk20 {
-		u-boot,dm-pre-reloc;
-		compatible = "fixed-clock";
-		#clock-cells = <0>;
-		clock-frequency = <20000000>;
-	};
-
-	clk25: clk25 {
-		u-boot,dm-pre-reloc;
-		compatible = "fixed-clock";
-		#clock-cells = <0>;
-		clock-frequency = <25000000>;
-	};
-
-	clk100: clk100 {
-		compatible = "fixed-clock";
-		#clock-cells = <0>;
-		clock-frequency = <100000000>;
-	};
-
-	clk125: clk125 {
-		compatible = "fixed-clock";
-		#clock-cells = <0>;
-		clock-frequency = <125000000>;
-	};
-
-	clk60: clk60 {
-		compatible = "fixed-clock";
-		#clock-cells = <0>;
-		clock-frequency = <60000000>;
-	};
-
 	timer: timer {
 		compatible = "arm,armv8-timer";
 		interrupts = <1 13 4>, <1 14 4>, <1 11 4>, <1 10 4>; /* FIXME 3rd cell */
@@ -237,7 +208,8 @@
 			clock-names = "clk_main", "clk_apb";
 			#dma-cells = <1>;
 			xlnx,bus-width = <64>;
-			clocks = <&clk100>, <&clk100>;
+			clocks = <&versal_net_clk ADMA>, <&versal_net_clk LPD_LSBUS>;
+			/*power-domains = <&versal_net_firmware PM_DEV_ADMA_0>; FIXME*/
 		};
 
 		adma1: dma-controller@ebd10000 {
@@ -248,7 +220,7 @@
 			clock-names = "clk_main", "clk_apb";
 			#dma-cells = <1>;
 			xlnx,bus-width = <64>;
-			clocks = <&clk100>, <&clk100>;
+			clocks = <&versal_net_clk ADMA>, <&versal_net_clk LPD_LSBUS>;
 		};
 
 		adma2: dma-controller@ebd20000 {
@@ -259,7 +231,7 @@
 			clock-names = "clk_main", "clk_apb";
 			#dma-cells = <1>;
 			xlnx,bus-width = <64>;
-			clocks = <&clk100>, <&clk100>;
+			clocks = <&versal_net_clk ADMA>, <&versal_net_clk LPD_LSBUS>;
 		};
 
 		adma3: dma-controller@ebd30000 {
@@ -270,7 +242,7 @@
 			clock-names = "clk_main", "clk_apb";
 			#dma-cells = <1>;
 			xlnx,bus-width = <64>;
-			clocks = <&clk100>, <&clk100>;
+			clocks = <&versal_net_clk ADMA>, <&versal_net_clk LPD_LSBUS>;
 		};
 
 		adma4: dma-controller@ebd40000 {
@@ -281,7 +253,7 @@
 			clock-names = "clk_main", "clk_apb";
 			#dma-cells = <1>;
 			xlnx,bus-width = <64>;
-			clocks = <&clk100>, <&clk100>;
+			clocks = <&versal_net_clk ADMA>, <&versal_net_clk LPD_LSBUS>;
 		};
 
 		adma5: dma-controller@ebd50000 {
@@ -292,7 +264,7 @@
 			clock-names = "clk_main", "clk_apb";
 			#dma-cells = <1>;
 			xlnx,bus-width = <64>;
-			clocks = <&clk100>, <&clk100>;
+			clocks = <&versal_net_clk ADMA>, <&versal_net_clk LPD_LSBUS>;
 		};
 
 		adma6: dma-controller@ebd60000 {
@@ -303,7 +275,7 @@
 			clock-names = "clk_main", "clk_apb";
 			#dma-cells = <1>;
 			xlnx,bus-width = <64>;
-			clocks = <&clk100>, <&clk100>;
+			clocks = <&versal_net_clk ADMA>, <&versal_net_clk LPD_LSBUS>;
 		};
 
 		adma7: dma-controller@ebd70000 {
@@ -314,7 +286,7 @@
 			clock-names = "clk_main", "clk_apb";
 			#dma-cells = <1>;
 			xlnx,bus-width = <64>;
-			clocks = <&clk100>, <&clk100>;
+			clocks = <&versal_net_clk ADMA>, <&versal_net_clk LPD_LSBUS>;
 		};
 
 		can0: can@f1980000 {
@@ -325,7 +297,7 @@
 			clock-names = "can_clk", "s_axi_aclk";
 			rx-fifo-depth = <64>;
 			tx-mailbox-count = <32>;
-			clocks = <&clk25>, <&clk25>;
+			clocks = <&versal_net_clk CAN0_REF_2X>, <&versal_net_clk LPD_LSBUS>;
 		};
 
 		can1: can@f1990000 {
@@ -336,7 +308,7 @@
 			clock-names = "can_clk", "s_axi_aclk";
 			rx-fifo-depth = <64>;
 			tx-mailbox-count = <32>;
-			clocks = <&clk25>, <&clk25>;
+			clocks = <&versal_net_clk CAN1_REF_2X>, <&versal_net_clk LPD_LSBUS>;
 		};
 
 		gem0: ethernet@f19e0000 {
@@ -349,7 +321,9 @@
 			#size-cells = <0>;
 			phy-handle = <&phy1>;
 			phy-mode = "rgmii-id";
-			clocks = <&clk2_6>, <&clk25>, <&clk25>, <&clk25>, <&clk25>;
+			clocks = <&versal_net_clk LPD_LSBUS>,
+				 <&versal_net_clk GEM0_REF>, <&versal_net_clk GEM0_REF_TX>,
+				 <&versal_net_clk GEM0_REF_RX>, <&versal_net_clk GEM_TSU_REF>;
 			phy1: ethernet-phy@1 {
 				reg = <1>;
 				max-speed = <100>;
@@ -370,7 +344,9 @@
 			#size-cells = <0>;
 			phy-handle = <&phy2>;
 			phy-mode = "rmii";
-			clocks = <&clk2_6>, <&clk25>, <&clk25>, <&clk25>, <&clk25>;
+			clocks = <&versal_net_clk LPD_LSBUS>,
+				 <&versal_net_clk GEM1_REF>, <&versal_net_clk GEM1_REF_TX>,
+				 <&versal_net_clk GEM1_REF_RX>, <&versal_net_clk GEM_TSU_REF>;
 			phy2: ethernet-phy@2 {
 				reg = <2>;
 				max-speed = <100>;
@@ -394,7 +370,7 @@
 			gpio-controller;
 			#interrupt-cells = <2>;
 			interrupt-controller;
-			clocks = <&clk25>;
+			clocks = <&versal_net_clk LPD_LSBUS>;
 		};
 
 		gpio1: gpio@f1020000 {
@@ -406,7 +382,7 @@
 			gpio-controller;
 			#interrupt-cells = <2>;
 			interrupt-controller;
-			clocks = <&clk25>;
+			clocks = <&versal_net_clk PMC_LSBUS_REF>;
 		};
 
 		i2c0: i2c@f1940000 {
@@ -417,7 +393,7 @@
 			clock-frequency = <400000>;
 			#address-cells = <1>;
 			#size-cells = <0>;
-			clocks = <&clk25>;
+			clocks = <&versal_net_clk I3C0_REF>;
 		};
 
 		i2c1: i2c@f1950000 {
@@ -428,7 +404,7 @@
 			clock-frequency = <400000>;
 			#address-cells = <1>;
 			#size-cells = <0>;
-			clocks = <&clk25>;
+			clocks = <&versal_net_clk I3C1_REF>;
 		};
 
 		i3c: i3c-master@f1948000 {
@@ -438,7 +414,7 @@
 			#address-cells = <1>;
 			#size-cells = <0>;
 			interrupts = <0 21 4>;
-			clocks = <&clk20>;
+			/* clocks = <&clk20>; FIXME */
 		};
 
 		ospi: spi@f1010000 {
@@ -452,7 +428,7 @@
 			cdns,trigger-address = <0xc0000000>;
 			is-dual = <0>;
 			is-stacked = <0>;
-			clocks = <&clk20>;
+			clocks = <&versal_net_clk OSPI_REF>;
 			#address-cells = <1>;
 			#size-cells = <0>;
 			power-domains = <&versal_net_firmware PM_DEV_OSPI>;
@@ -500,7 +476,8 @@
 			is-dual = <1>;
 			spi-rx-bus-width = <4>;
 			spi-tx-bus-width = <4>;
-			clocks = <&clk25>, <&clk25>;
+			clocks = <&versal_net_clk QSPI_REF>, <&versal_net_clk LPD_LSBUS>;
+			power-domains = <&versal_net_firmware PM_DEV_QSPI>;
 			#address-cells = <1>;
 			#size-cells = <0>;
 
@@ -547,7 +524,8 @@
 			clock-names = "clk_xin", "clk_ahb";
 			xlnx,device_id = <0>;
 			no-1-8-v;
-			clocks = <&clk20>, <&clk20>;
+			clocks = <&versal_net_clk SDIO1_REF>, <&versal_net_clk LPD_LSBUS>;
+			power-domains = <&versal_net_firmware PM_DEV_SDIO_1>;
 		};
 
 		sdhci1: mmc@f1050000 {
@@ -558,7 +536,8 @@
 			clock-names = "clk_xin", "clk_ahb";
 			xlnx,device_id = <1>;
 			no-1-8-v;
-			clocks = <&clk20>, <&clk20>;
+			clocks = <&versal_net_clk SDIO0_REF>, <&versal_net_clk LPD_LSBUS>;
+			power-domains = <&versal_net_firmware PM_DEV_SDIO_0>;
 		};
 
 		serial0: serial@f1920000 {
@@ -568,7 +547,8 @@
 			interrupts = <0 25 4>;
 			reg-io-width = <4>;
 			clock-names = "uartclk", "apb_pclk";
-			clocks = <&clk1>, <&clk1>;
+			clocks = <&versal_net_clk UART0_REF>, <&versal_net_clk LPD_LSBUS>;
+			power-domains = <&versal_net_firmware PM_DEV_UART_0>;
 			clock = <1000000>;
 			current-speed = <115200>;
 			skip-init;
@@ -591,7 +571,8 @@
 			clock-names = "ref_clk", "pclk";
 			#address-cells = <1>;
 			#size-cells = <0>;
-			clocks = <&clk25>, <&clk25>;
+			clocks = <&versal_net_clk SPI0_REF>, <&versal_net_clk LPD_LSBUS>;
+			power-domains = <&versal_net_firmware PM_DEV_SPI_0>;
 			num-cs = <1>;
 
 			flash@0 {
@@ -620,7 +601,8 @@
 			clock-names = "ref_clk", "pclk";
 			#address-cells = <1>;
 			#size-cells = <0>;
-			clocks = <&clk25>, <&clk25>;
+			clocks = <&versal_net_clk SPI1_REF>, <&versal_net_clk LPD_LSBUS>;
+			power-domains = <&versal_net_firmware PM_DEV_SPI_1>;
 			num-cs = <1>;
 
 			flash@0 {
@@ -647,7 +629,7 @@
 			interrupts = <0 43 4>, <0 44 4>, <0 45 4>;
 			timer-width = <32>;
 			reg = <0x0 0xf1dc0000 0x0 0x1000>;
-			clocks = <&clk1>, <&clk1>;
+			/* clocks = <&clk1>, <&clk1>; */ 
 		};
 
 		usb0: usb@f1e00000 {
@@ -658,7 +640,7 @@
 			ranges;
 			#address-cells = <2>;
 			#size-cells = <2>;
-			clocks = <&clk60>, <&clk60>;
+			/* clocks = <&clk60>, <&clk60>; */
 			power-domains = <&versal_net_firmware PM_DEV_USB_0>;
 			resets = <&versal_net_reset VERSAL_RST_USB_0>;
 			xlnx,usb-polarity = <0>;
@@ -690,7 +672,7 @@
 			ranges;
 			#address-cells = <2>;
 			#size-cells = <2>;
-			clocks = <&clk60 &clk60>;
+			/* clocks = <&clk60 &clk60>; */
 			power-domains = <&versal_net_firmware PM_DEV_USB_1>;
 			resets = <&versal_net_reset VERSAL_RST_USB_1>;
 			xlnx,usb-polarity = <0x00>;
@@ -722,7 +704,7 @@
 			interrupts = <0 139 1>, <0 140 1>;
 			timeout-sec = <30>;
 			pretimeout-sec = <25>;
-			clocks = <&clk25>;
+			clocks = <&versal_net_clk LPD_LSBUS>; /* FIXME is this correct */
 		};
 
 		wwdt1: watchdog@ecd10000 {
@@ -733,7 +715,7 @@
 			interrupts = <0 143 1>, <0 144 1>;
 			timeout-sec = <30>;
 			pretimeout-sec = <25>;
-			clocks = <&clk25>;
+			clocks = <&versal_net_clk LPD_LSBUS>;
 		};
 
 		wwdt2: watchdog@ece10000 {
@@ -744,7 +726,7 @@
 			interrupts = <0 147 1>,  <0 148 1>;
 			timeout-sec = <30>;
 			pretimeout-sec = <25>;
-			clocks = <&clk25>;
+			clocks = <&versal_net_clk LPD_LSBUS>;
 		};
 
 		wwdt3: watchdog@ecf10000 {
@@ -755,7 +737,7 @@
 			interrupts = <0 164 1>, <0 165 1>;
 			timeout-sec = <30>;
 			pretimeout-sec = <25>;
-			clocks = <&clk25>;
+			clocks = <&versal_net_clk LPD_LSBUS>;
 		};
 	};
 };
