arm64: versal-net: Update license information
Update and align license information with the version which was sent
upstream.

Signed-off-by: Michal Simek <michal.simek@amd.com>

--- a/arch/arm/dts/versal-net-mini.dts
+++ b/arch/arm/dts/versal-net-mini.dts
@@ -2,9 +2,10 @@
 /*
  * dts file for Xilinx Versal NET
  *
- * (C) Copyright 2021 - 2022, Xilinx, Inc.
+ * Copyright (C) 2021 - 2022, Xilinx, Inc.
+ * Copyright (C) 2022, Advanced Micro Devices, Inc.
  *
- * Michal Simek <michal.simek@xilinx.com>
+ * Michal Simek <michal.simek@amd.com>
  */
 
 /dts-v1/;
