--- a/arch/arm/mach-versal-net/Makefile
+++ b/arch/arm/mach-versal-net/Makefile
@@ -1,7 +1,9 @@
 # SPDX-License-Identifier: GPL-2.0
 #
-# (C) Copyright 2021 - 2022 Xilinx, Inc.
-# Michal Simek <michal.simek@xilinx.com>
+# Copyright (C) 2021 - 2022, Xilinx, Inc.
+# Copyright (C) 2022, Advanced Micro Devices, Inc.
+#
+# Michal Simek <michal.simek@amd.com>
 #
 
 obj-y	+= clk.o
