--- a/board/xilinx/versal-net/Kconfig
+++ b/board/xilinx/versal-net/Kconfig
@@ -1,6 +1,8 @@
-# Copyright (c) 2020 - 2022, Xilinx, Inc.
-#
 # SPDX-License-Identifier: GPL-2.0
+#
+# Copyright (C) 2020 - 2022, Xilinx, Inc.
+# Copyright (C) 2022, Advanced Micro Devices, Inc.
+#
 
 if ARCH_VERSAL_NET
 
