--- a/arch/arm/dts/versal-net-mini.dts
+++ b/arch/arm/dts/versal-net-mini.dts
@@ -19,7 +19,7 @@
 	#size-cells = <2>;
 
 	memory: memory@0 {
-		reg = <0 0xBBF00000 0 0x100000>, <0x0 0x0 0x0 0x80000000>;
+		reg = <0 0xBBF00000 0 0x100000>, <0 0 0 0x80000000>;
 		device_type = "memory";
 	};
 
