arm64: zynqmp: Add support for SC revC
New system controllers will be using ADI ethernet phy instead of TI because
of supply chain issues.
Specific adi properties are setup to default values and don't need to be
described but they were added just in case that they need to be tuned.

Signed-off-by: Michal Simek <michal.simek@amd.com>
State: pending

--- a/arch/arm/dts/Makefile
+++ b/arch/arm/dts/Makefile
@@ -352,6 +352,7 @@ dtb-$(CONFIG_ARCH_ZYNQMP) += \
 	zynqmp-mini-qspi-x2-single.dtb		\
 	zynqmp-mini-qspi-x2-stacked.dtb		\
 	zynqmp-sc-revB.dtb			\
+	zynqmp-sc-revC.dtb			\
 	zynqmp-sc-vek280-revA.dtbo		\
 	zynqmp-sc-vhk158-revA.dtbo		\
 	zynqmp-sc-vpk120-revB.dtbo		\
