--- a/arch/arm/dts/versal-net-ipp-rev1.9.dts
+++ b/arch/arm/dts/versal-net-ipp-rev1.9.dts
@@ -209,7 +209,7 @@
 			#dma-cells = <1>;
 			xlnx,bus-width = <64>;
 			clocks = <&versal_net_clk ADMA>, <&versal_net_clk LPD_LSBUS>;
-			/*power-domains = <&versal_net_firmware PM_DEV_ADMA_0>; FIXME*/
+			power-domains = <&versal_net_firmware PM_DEV_ADMA_0>;
 		};
 
 		adma1: dma-controller@ebd10000 {
@@ -221,6 +221,7 @@
 			#dma-cells = <1>;
 			xlnx,bus-width = <64>;
 			clocks = <&versal_net_clk ADMA>, <&versal_net_clk LPD_LSBUS>;
+			power-domains = <&versal_net_firmware PM_DEV_ADMA_1>;
 		};
 
 		adma2: dma-controller@ebd20000 {
@@ -232,6 +233,7 @@
 			#dma-cells = <1>;
 			xlnx,bus-width = <64>;
 			clocks = <&versal_net_clk ADMA>, <&versal_net_clk LPD_LSBUS>;
+			power-domains = <&versal_net_firmware PM_DEV_ADMA_2>;
 		};
 
 		adma3: dma-controller@ebd30000 {
@@ -243,6 +245,7 @@
 			#dma-cells = <1>;
 			xlnx,bus-width = <64>;
 			clocks = <&versal_net_clk ADMA>, <&versal_net_clk LPD_LSBUS>;
+			power-domains = <&versal_net_firmware PM_DEV_ADMA_3>;
 		};
 
 		adma4: dma-controller@ebd40000 {
@@ -254,6 +257,7 @@
 			#dma-cells = <1>;
 			xlnx,bus-width = <64>;
 			clocks = <&versal_net_clk ADMA>, <&versal_net_clk LPD_LSBUS>;
+			power-domains = <&versal_net_firmware PM_DEV_ADMA_4>;
 		};
 
 		adma5: dma-controller@ebd50000 {
@@ -265,6 +269,7 @@
 			#dma-cells = <1>;
 			xlnx,bus-width = <64>;
 			clocks = <&versal_net_clk ADMA>, <&versal_net_clk LPD_LSBUS>;
+			power-domains = <&versal_net_firmware PM_DEV_ADMA_5>;
 		};
 
 		adma6: dma-controller@ebd60000 {
@@ -276,6 +281,7 @@
 			#dma-cells = <1>;
 			xlnx,bus-width = <64>;
 			clocks = <&versal_net_clk ADMA>, <&versal_net_clk LPD_LSBUS>;
+			power-domains = <&versal_net_firmware PM_DEV_ADMA_6>;
 		};
 
 		adma7: dma-controller@ebd70000 {
@@ -287,6 +293,7 @@
 			#dma-cells = <1>;
 			xlnx,bus-width = <64>;
 			clocks = <&versal_net_clk ADMA>, <&versal_net_clk LPD_LSBUS>;
+			power-domains = <&versal_net_firmware PM_DEV_ADMA_7>;
 		};
 
 		can0: can@f1980000 {
@@ -298,6 +305,7 @@
 			rx-fifo-depth = <64>;
 			tx-mailbox-count = <32>;
 			clocks = <&versal_net_clk CAN0_REF_2X>, <&versal_net_clk LPD_LSBUS>;
+			power-domains = <&versal_net_firmware PM_DEV_CAN_FD_0>;
 		};
 
 		can1: can@f1990000 {
@@ -309,6 +317,7 @@
 			rx-fifo-depth = <64>;
 			tx-mailbox-count = <32>;
 			clocks = <&versal_net_clk CAN1_REF_2X>, <&versal_net_clk LPD_LSBUS>;
+			power-domains = <&versal_net_firmware PM_DEV_CAN_FD_1>;
 		};
 
 		gem0: ethernet@f19e0000 {
@@ -324,6 +333,7 @@
 			clocks = <&versal_net_clk LPD_LSBUS>,
 				 <&versal_net_clk GEM0_REF>, <&versal_net_clk GEM0_REF_TX>,
 				 <&versal_net_clk GEM0_REF_RX>, <&versal_net_clk GEM_TSU_REF>;
+			power-domains = <&versal_net_firmware PM_DEV_GEM_0>;
 			mdio0: mdio {
 				#address-cells = <1>;
 				#size-cells = <0>;
@@ -353,6 +363,7 @@
 			clocks = <&versal_net_clk LPD_LSBUS>,
 				 <&versal_net_clk GEM1_REF>, <&versal_net_clk GEM1_REF_TX>,
 				 <&versal_net_clk GEM1_REF_RX>, <&versal_net_clk GEM_TSU_REF>;
+			power-domains = <&versal_net_firmware PM_DEV_GEM_1>;
 			mdio1: mdio {
 				#address-cells = <1>;
 				#size-cells = <0>;
@@ -383,6 +394,7 @@
 			#interrupt-cells = <2>;
 			interrupt-controller;
 			clocks = <&versal_net_clk LPD_LSBUS>;
+			power-domains = <&versal_net_firmware PM_DEV_GPIO>;
 		};
 
 		gpio1: gpio@f1020000 {
@@ -395,6 +407,7 @@
 			#interrupt-cells = <2>;
 			interrupt-controller;
 			clocks = <&versal_net_clk PMC_LSBUS_REF>;
+			power-domains = <&versal_net_firmware PM_DEV_GPIO_PMC>;
 		};
 
 		i2c0: i2c@f1940000 {
@@ -406,6 +419,7 @@
 			#address-cells = <1>;
 			#size-cells = <0>;
 			clocks = <&versal_net_clk I3C0_REF>;
+			power-domains = <&versal_net_firmware PM_DEV_I2C_0>;
 		};
 
 		i2c1: i2c@f1950000 {
@@ -417,6 +431,7 @@
 			#address-cells = <1>;
 			#size-cells = <0>;
 			clocks = <&versal_net_clk I3C1_REF>;
+			power-domains = <&versal_net_firmware PM_DEV_I2C_1>;
 		};
 
 		i3c: i3c-master@f1948000 {
@@ -426,7 +441,8 @@
 			#address-cells = <1>;
 			#size-cells = <0>;
 			interrupts = <0 21 4>;
-			/* clocks = <&clk20>; FIXME */
+			clocks = <&versal_net_clk I2C_REF>;
+			power-domains = <&versal_net_firmware PM_DEV_I2C_PMC>;
 		};
 
 		ospi: spi@f1010000 {
@@ -639,7 +655,8 @@
 			interrupts = <0 43 4>, <0 44 4>, <0 45 4>;
 			timer-width = <32>;
 			reg = <0x0 0xf1dc0000 0x0 0x1000>;
-			/* clocks = <&clk1>, <&clk1>; */ 
+			clocks = <&versal_net_clk TTC0>, <&versal_net_clk LPD_LSBUS>;
+			power-domains = <&versal_net_firmware PM_DEV_TTC_0>;
 		};
 
 		usb0: usb@f1e00000 {
@@ -651,6 +668,7 @@
 			#address-cells = <2>;
 			#size-cells = <2>;
 			/* clocks = <&clk60>, <&clk60>; */
+			clocks = <&versal_net_clk USB0_BUS_REF>, <&versal_net_clk USB0_BUS_REF>;
 			power-domains = <&versal_net_firmware PM_DEV_USB_0>;
 			resets = <&versal_net_reset VERSAL_RST_USB_0>;
 
@@ -679,7 +697,7 @@
 			ranges;
 			#address-cells = <2>;
 			#size-cells = <2>;
-			/* clocks = <&clk60 &clk60>; */
+			clocks = <&versal_net_clk USB1_BUS_REF>, <&versal_net_clk USB1_BUS_REF>;
 			power-domains = <&versal_net_firmware PM_DEV_USB_1>;
 			resets = <&versal_net_reset VERSAL_RST_USB_1>;
 
@@ -708,7 +726,8 @@
 			interrupts = <0 139 1>, <0 140 1>;
 			timeout-sec = <30>;
 			pretimeout-sec = <25>;
-			clocks = <&versal_net_clk LPD_LSBUS>; /* FIXME is this correct */
+			clocks = <&versal_net_clk FPD_WWDT>;
+			power-domains = <&versal_net_firmware PM_DEV_FPD_SWDT_0>;
 		};
 
 		wwdt1: watchdog@ecd10000 {
@@ -719,7 +738,8 @@
 			interrupts = <0 143 1>, <0 144 1>;
 			timeout-sec = <30>;
 			pretimeout-sec = <25>;
-			clocks = <&versal_net_clk LPD_LSBUS>;
+			clocks = <&versal_net_clk FPD_WWDT>;
+			power-domains = <&versal_net_firmware PM_DEV_FPD_SWDT_1>;
 		};
 
 		wwdt2: watchdog@ece10000 {
@@ -730,7 +750,8 @@
 			interrupts = <0 147 1>,  <0 148 1>;
 			timeout-sec = <30>;
 			pretimeout-sec = <25>;
-			clocks = <&versal_net_clk LPD_LSBUS>;
+			clocks = <&versal_net_clk FPD_WWDT>;
+			power-domains = <&versal_net_firmware PM_DEV_FPD_SWDT_2>;
 		};
 
 		wwdt3: watchdog@ecf10000 {
@@ -741,7 +762,8 @@
 			interrupts = <0 164 1>, <0 165 1>;
 			timeout-sec = <30>;
 			pretimeout-sec = <25>;
-			clocks = <&versal_net_clk LPD_LSBUS>;
+			clocks = <&versal_net_clk FPD_WWDT>;
+			power-domains = <&versal_net_firmware PM_DEV_FPD_SWDT_3>;
 		};
 	};
 };
