arm64: versal: Corect the clock name
The bindings recommend the clockname to be
uartclk and apb_pclk. Fix the clock name accordingly.

Signed-off-by: Shubhrajyoti Datta <shubhrajyoti.datta@amd.com>

--- a/arch/arm/dts/versal.dtsi
+++ b/arch/arm/dts/versal.dtsi
@@ -437,7 +437,7 @@
 			reg = <0 0xff000000 0 0x1000>;
 			interrupts = <0 18 4>;
 			reg-io-width = <4>;
-			clock-names = "uart_clk", "apb_clk";
+			clock-names = "uartclk", "apb_pclk";
 			current-speed = <115200>;
 			u-boot,dm-pre-reloc;
 		};
@@ -448,7 +448,7 @@
 			reg = <0 0xff010000 0 0x1000>;
 			interrupts = <0 19 4>;
 			reg-io-width = <4>;
-			clock-names = "uart_clk", "apb_clk";
+			clock-names = "uartclk", "apb_pclk";
 			current-speed = <115200>;
 			u-boot,dm-pre-reloc;
 		};
