--- a/arch/arm/Kconfig
+++ b/arch/arm/Kconfig
@@ -1131,7 +1131,7 @@ config ARCH_VERSAL
 	imply ENV_VARS_UBOOT_RUNTIME_CONFIG
 
 config ARCH_VERSAL_NET
-	bool "Support Xilinx Keystone Platform"
+	bool "Support Xilinx Versal NET Platform"
 	select ARM64
 	select CLK
 	select DM
