--- a/arch/arm/dts/zynqmp.dtsi
+++ b/arch/arm/dts/zynqmp.dtsi
@@ -995,7 +995,7 @@
 				iommus = <&smmu 0x860>;
 				snps,quirk-frame-length-adjustment = <0x20>;
 				clock-names = "ref";
-				snps,enable_guctl1_resume_quirk;
+				snps,resume-hs-terminations;
 				snps,enable_guctl1_ipd_quirk;
 				snps,xhci-reset-on-resume;
 				snps,xhci-stream-quirk;
@@ -1028,7 +1028,7 @@
 				snps,quirk-frame-length-adjustment = <0x20>;
 				snps,refclk_fladj;
 				clock-names = "ref";
-				snps,enable_guctl1_resume_quirk;
+				snps,resume-hs-terminations;
 				snps,enable_guctl1_ipd_quirk;
 				snps,xhci-reset-on-resume;
 				snps,xhci-stream-quirk;
