--- a/arch/arm/dts/Makefile
+++ b/arch/arm/dts/Makefile
@@ -446,6 +446,9 @@ dtb-$(CONFIG_ARCH_VERSAL_NET) += \
 	versal-net-emu-rev1.9.dtb \
 	versal-net-ipp-rev1.9.dtb \
 	versal-net-ipp-rev1.9-ospi.dtb \
+	versal-net-vn-p-b2197-00-revA.dtb \
+	x-prc-07-revA.dtbo \
+	x-prc-09-revA.dtbo \
 	versal-net-mini.dtb
 dtb-$(CONFIG_ARCH_ZYNQMP_R5) += \
 	zynqmp-r5.dtb
