arm64: zynqmp: Add support for Kria K24 SOM
SOM itself from PS point of view is using the same configuration as K26
that's why reuse that files and only chagne compatible strings.

The reason for creating own set of files is just in case when versions
start to diverge because of HW change, supply chain issue, etc.

Signed-off-by: Michal Simek <michal.simek@amd.com>

--- a/arch/arm/dts/Makefile
+++ b/arch/arm/dts/Makefile
@@ -359,6 +359,8 @@ dtb-$(CONFIG_ARCH_ZYNQMP) += \
 	zynqmp-sc-vpk180-revA.dtbo		\
 	zynqmp-sc-vpk180-revB.dtbo		\
 	zynqmp-sc-vn-p-b2197-00-revA.dtbo	\
+	zynqmp-sm-k24-revA.dtb			\
+	zynqmp-smk-k24-revA.dtb			\
 	zynqmp-sm-k26-revA.dtb			\
 	zynqmp-smk-k26-revA.dtb			\
 	zynqmp-sck-kr-g-revA.dtbo		\
