xilinx: versal-net: Add mini eMMC 5.1 configuration
Add support for Versal NET mini eMMC 5.1 configuration. Add device tree
and defconfig.

Signed-off-by: Ashok Reddy Soma <ashok.reddy.soma@amd.com>

--- a/arch/arm/dts/Makefile
+++ b/arch/arm/dts/Makefile
@@ -452,6 +452,7 @@ dtb-$(CONFIG_ARCH_VERSAL_NET) += \
 	x-prc-07-revA.dtbo \
 	x-prc-09-revA.dtbo \
 	versal-net-mini.dtb \
+	versal-net-mini-emmc.dtb \
 	versal-net-mini-ospi-single.dtb
 dtb-$(CONFIG_ARCH_ZYNQMP_R5) += \
 	zynqmp-r5.dtb
