xilinx: versal-net: Add mini qspi configuration
Add support for Versal NET mini Quad SPI flash configuration. This runs
from onchip memory, so it has to be compact. Hence only Quad SPI
related settings are enabled.

Signed-off-by: Ashok Reddy Soma <ashok.reddy.soma@amd.com>

--- a/arch/arm/dts/Makefile
+++ b/arch/arm/dts/Makefile
@@ -453,7 +453,8 @@ dtb-$(CONFIG_ARCH_VERSAL_NET) += \
 	x-prc-09-revA.dtbo \
 	versal-net-mini.dtb \
 	versal-net-mini-emmc.dtb \
-	versal-net-mini-ospi-single.dtb
+	versal-net-mini-ospi-single.dtb \
+	versal-net-mini-qspi-single.dtb
 dtb-$(CONFIG_ARCH_ZYNQMP_R5) += \
 	zynqmp-r5.dtb
 dtb-$(CONFIG_AM33XX) += \
