arm64: zynqmp: Add support for vek280-revB SC design
From description perspective revB is the same with revA but system
controller design is based on revC not revB. Major diff is that revC is
using different ethernet patch then revB.
That's why create vek280-revB and compile it with zynqmp-sc-revC.dtb to
create full DTB which describe this board.

Signed-off-by: Michal Simek <michal.simek@amd.com>

--- a/arch/arm/dts/Makefile
+++ b/arch/arm/dts/Makefile
@@ -354,6 +354,7 @@ dtb-$(CONFIG_ARCH_ZYNQMP) += \
 	zynqmp-sc-revB.dtb			\
 	zynqmp-sc-revC.dtb			\
 	zynqmp-sc-vek280-revA.dtbo		\
+	zynqmp-sc-vek280-revB.dtbo		\
 	zynqmp-sc-vhk158-revA.dtbo		\
 	zynqmp-sc-vpk120-revB.dtbo		\
 	zynqmp-sc-vpk180-revA.dtbo		\
