arm64: versal-net: Disable I3C masters for se9
Either i2c or i3c can be enabled at a time, not both. To enable i3c,
I2C_I3C_CTRL0 in LPX_IOU_SECURE_SLCR has to be set 1. Which is 0 by
default (which means it is i2c mode only). So disable I3C nodes in
default se9 dtb.

To use i3c masters, update LPX_IOU_SECURE_SLCR register and use
overlay x-prc-09-i3c-revA.dts.

i3c dtb will contain i2c child nodes with i2c controller disabled.
That's not a big deal that's why don't remove it.

Signed-off-by: Jay Buddhabhatti <jay.buddhabhatti@xilinx.com>

--- a/arch/arm/dts/Makefile
+++ b/arch/arm/dts/Makefile
@@ -452,6 +452,7 @@ dtb-$(CONFIG_ARCH_VERSAL_NET) += \
 	versal-net-vn-p-b2197-00-revA.dtb \
 	x-prc-07-revA.dtbo \
 	x-prc-09-revA.dtbo \
+	x-prc-09-i3c-revA.dtbo \
 	versal-net-mini.dtb \
 	versal-net-mini-emmc.dtb \
 	versal-net-mini-ospi-single.dtb \
