arm64: versal: Describe firmware reset in versal-clk
versal_reset node is only present in versal-clk.dtsi that's why it should
be defined here. But also this IP reset is the same for all ospi instances
that's why defined it for all.

Signed-off-by: Michal Simek <michal.simek@amd.com>

--- a/arch/arm/dts/versal-clk.dtsi
+++ b/arch/arm/dts/versal-clk.dtsi
@@ -252,6 +252,8 @@
 &ospi {
 	clocks = <&versal_clk OSPI_REF>;
 	power-domains = <&versal_firmware PM_DEV_OSPI>;
+	reset-names = "qspi";
+	resets = <&versal_reset VERSAL_RST_OSPI>;
 };
 
 &rtc {
