dts: versal_net: Update OSPI node for se7
Currently OSPI is returning error -5 since its not getting reset property.
Add reset property and provide proper reset node ID. Also add mt35xu02g
compatible string since mt35xu02g flash is present in SE7. OSPI flash in
the SE7 boards are stacked so set is-stacked field for OSPI node.

Signed-off-by: Jay Buddhabhatti <jay.buddhabhatti@xilinx.com>

--- a/arch/arm/dts/versal-net-clk-ccf.dtsi
+++ b/arch/arm/dts/versal-net-clk-ccf.dtsi
@@ -249,6 +249,7 @@
 &ospi {
 	clocks = <&versal_net_clk OSPI_REF>;
 	power-domains = <&versal_net_firmware PM_DEV_OSPI>;
+	resets = <&versal_net_reset VERSAL_RST_OSPI>;
 };
 
 &rtc {
